# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-airflow-providers-mqtt"
version = "0.1.0"
description = "Provider package apache-airflow-providers-mqtt for Apache Airflow"
requires-python = ">=3.10"

dependencies = [
  "apache-airflow>=2.11.0",
  "apache-airflow-providers-common-compat>=1.12.0",
  "apache-airflow-providers-common-messaging>=2.0.0",
  "paho-mqtt>=2.1.0",
  "PySocks"
]

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow.providers.mqtt.get_provider_info:get_provider_info"

[tool.flit.module]
name = "airflow.providers.mqtt"

[tool.flit.sdist]
include = [
]
